<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/welcom"
            android:layout_centerHorizontal="true"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_eng"
            android:id="@+id/textView_info"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_kor"
            android:id="@+id/textView_info_kor"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textView_info"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:id="@+id/s_terms"
            android:textSize="25dp"
            android:layout_below="@+id/textView_info_kor"
            android:layout_marginTop="35dp"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:hint="Enter here"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/search_google"
            android:id="@+id/button_google"
            android:layout_below="@+id/s_terms"
            android:layout_marginTop="36dp"
            android:layout_alignRight="@+id/textView_info_kor"
            android:layout_alignEnd="@+id/textView_info_kor"
            android:layout_alignLeft="@+id/textView_info_kor"
            android:layout_alignStart="@+id/textView_info_kor"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/search_naver"
            android:id="@+id/button_naver"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/button_google"
            android:layout_alignLeft="@+id/button_google"
            android:layout_alignStart="@+id/button_google"
            android:layout_alignRight="@+id/button_google"
            android:layout_alignEnd="@+id/button_google"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/search_enha"
            android:id="@+id/button_enha"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/button_naver"
            android:layout_alignLeft="@+id/button_naver"
            android:layout_alignStart="@+id/button_naver"
            android:layout_alignRight="@+id/button_naver"
            android:layout_alignEnd="@+id/button_naver"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="testing."
            android:id="@+id/textView2"
            android:layout_below="@+id/button_enha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
